update code to reflect java version upgrade from v8 to v21